RESOLVED FIXED158810
RTL <select> forms are misplaced
https://bugs.webkit.org/show_bug.cgi?id=158810
Summary RTL <select> forms are misplaced
Dean Jackson
Reported 2016-06-15 15:02:36 PDT
RTL <select> forms are misplaced
Attachments
Patch (6.58 KB, patch)
2016-06-15 15:08 PDT, Dean Jackson
eric.carlson: review+
Dean Jackson
Comment 1 2016-06-15 15:04:16 PDT
<rdar://problem/24847541> AppKit made a change in Sierra that causes popup menus to snap to a different point when the system language is RTL. We need to take that into account.
Dean Jackson
Comment 2 2016-06-15 15:08:28 PDT
Ahmad Saleem
Comment 3 2022-09-25 06:05:46 PDT
This landed and didn't backed out: https://github.com/WebKit/WebKit/commit/c367c7ced78b54c22520316140b27da52b10d3bc Marking this as "RESOLVED FIXED". Thanks!
Note You need to log in before you can comment on or make changes to this bug.